# batch-command-runner

./: Cargo.toml  README.md
src/: common.rs  job_collector.rs  lib.rs  main.rs
src/common/: parsers.rs  subprocess.rs
src/job_runner/: single.rs
