[package]
name = "batch-command-runner"
version = "0.1.0"
edition = "2021"
authors = ["Wade Berrier <wberrier@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
shleazy = "0"
